--- a/src/app/features/dashboard/employer/components/my-jobs/my-jobs.component.html
+++ b/src/app/features/dashboard/employer/components/my-jobs/my-jobs.component.html
@@ -127,4 +127,10 @@
       </nav>
     </div>
   </div>
+
+  <!-- Delete Confirmation Modal -->
+  <app-app-modal [isVisible]="showDeleteModal" title="Confirm Delete" message="Are you sure you want to delete this job?"
+    subtitle="This action cannot be undone." iconClass="fas fa-exclamation-triangle" confirmText="Delete"
+    cancelText="Cancel" (confirm)="confirmDelete()" (cancel)="cancelDelete()">
+  </app-app-modal>
 </div>
