--- a/src/app/features/dashboard/employer/components/employer-home/employer-home.component.html
+++ b/src/app/features/dashboard/employer/components/employer-home/employer-home.component.html
@@ -153,7 +153,7 @@
                                 <span class="separator">.</span>
                                 <span>{{ job.location }}</span>
                                 <span class="separator">.</span>
-                                <span class="text-muted">Posted {{ job.created_at | relativeTime }}</span>
+                                <span class="text-muted">Posted {{ job.published_at | relativeTime }}</span>
                             </div>
                         </div>
                         <div class="mt-3 mt-md-0 me-lg-2 status-badge"
